@@ -21,6 +21,62 @@ $dirServer = ldap_connect($ldap_server);
 $ldapReturn = ldap_bind($dirServer, $ldap_manager, $ldap_password);
 
 // -------------------------------
+// find out if a kerberos principal exists
+
+function find_kp ($uid) {
+
+    global $k5start;
+    global $kdcmaster;
+
+    $kp = '';
+
+    // check to see if there is a kerberos principal
+    $kcmd = "$k5start -- /usr/bin/remctl $kdcmaster kadmin examine $uid";
+    $return_text = array();
+    $ret_last = exec($kcmd, $return_text, $return_status);
+    $pat = '/^Principal:\s+(.*)/';
+    foreach ($return_text as $t) {
+        if (preg_match($pat, $t, $mats)) {
+            $kp = $mats[1];
+            break;
+        }
+    }
+
+    return $kp;
+
+}
+
+// -------------------------------
+// Set a kerberos password
+
+function kp_pw ($uid, $pw) {
+
+    global $k5start;
+    global $kdcmaster;
+    global $ok;
+    global $warn;
+
+    $kp = find_kp($uid);
+    if (strlen($kp)>0) {
+        // add the kerberos principal
+        $kcmd = "$k5start -- /usr/bin/remctl $kdcmaster "
+            . "kadmin reset_passwd $uid $pw";
+        $ret_last = exec($kcmd, $return_text, $return_status);
+        if ($return_status) {
+            $_SESSION['s_msg'] .= "<font $warn> remctl error: ";
+            foreach ($return_text as $t) {
+                $_SESSION['s_msg'] .= $t.'<br>';
+            }
+            $_SESSION['s_msg'] .= '</font>';
+        } else {
+            $_SESSION['s_msg'] 
+                .= "<font $ok> Kerberos password updated</font><br>";
+        }
+    }
+    return;
+}
+
+// -------------------------------
 // update the passwords stored in the ldap directory
 
 function ldap_set_password ($uid, $pwField, $newPw) {
@@ -108,16 +164,10 @@ $warn = 'color="#330000"';
 if ( isset($in_button_update) ) {
 
     ldap_set_password ($in_uid, 'userpassword', $in_new_password);
+    kp_pw ($in_uid, $in_new_password);
 
-    # -- no samba passwords for now
-    $samba_cmd = "/mac/www/macdir/get-nt-pw.pl $in_new_password";
-    $nt_lm_passwords = shell_exec($samba_cmd);
-    $lmPwd = strtok($nt_lm_passwords,":");
-    $ntPwd = substr(strtok(":"),0,32);
-    ldap_set_password ($in_uid, 'sambantpassword', $ntPwd);
-
-    # Do not set the lmpassword. It is too easy to decipher.
-    # Well, set it for a little bit to get around a problem
+    # -- no samba passwords
+    ldap_set_password ($in_uid, 'sambantpassword', '');
     ldap_set_password ($in_uid, 'sambalmpassword', '');
 
 }
